sumo/tests/duarouter/errors/Makefile.am
SUBDIRS =  false_net false_output no_input no_net no_output unknown_option

EXTRA_DIST =  input_net.net.xml input_trips.trips.xml testsuite.duarouter

